--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,274 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --header-height: 6rem;
+
+  --fast-transition: 250ms;
+  --average-transition: 500ms;
+  --default-animation: ease-in-out;
+
+  --primary-color: #262626;
+  --secondary-color: #eaeae5;
+  --secondary-color-light-transparency: #eaeae5bf;
+  --secondary-color-medium-transparency: #eaeae57f;
+  --secondary-color-high-transparency: #eaeae53f;
+  --yellow: #e0dc4f;
+
+  --default-border: 1px solid var(--secondary-color-medium-transparency);
+
+  --icon-shadow: drop-shadow(-1px 0px 1px var(--primary-color))
+    drop-shadow(0px -1px 1px var(--primary-color))
+    drop-shadow(1px 0px 1px var(--primary-color))
+    drop-shadow(0px 1px 1px var(--primary-color));
+
+  --styling-panel-x-margins: 1.5rem;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+/* ------------------------------------------------------------------------------- */
+/* ------------------------------------------------------------------------------- */
+/* -------------------------------------RESET------------------------------------- */
+/* ------------------------------------------------------------------------------- */
+/* ------------------------------------------------------------------------------- */
+/* http://meyerweb.com/eric/tools/css/reset/
+v2.0 | 20110126
+License: none (public domain)
+*/
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+dfn,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+sub,
+sup,
+tt,
+var,
+b,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video,
+button {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+  color: inherit;
+  text-decoration: inherit;
+  background: none;
 }
+strong,
+u,
+em,
+del {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  color: inherit;
+  background: none;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+input,
+textarea {
+  outline: none;
+  border: none;
+  padding: 0;
+}
+
+/* ------------------------------------------------------------------------------- */
+/* ------------------------------------------------------------------------------- */
+/* ------------------------------------GLOBALS------------------------------------ */
+/* ------------------------------------------------------------------------------- */
+/* ------------------------------------------------------------------------------- */
 
 html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+body,
+main {
+  height: 100%;
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+header {
+  position: absolute;
+  z-index: 1;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: var(--header-height);
+  align-content: center;
+  padding: 0 1.5rem;
+  /* color: #3a342c; */
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+button:not(.grabbable) {
+  cursor: pointer;
 }
 
-a {
+button:disabled {
+  cursor: not-allowed;
+  color: var(--secondary-color-medium-transparency);
+}
+
+h1 {
+  font-size: 1.5rem;
+  color: var(--secondary-color);
+  text-shadow: -1px 0px 3px var(--primary-color),
+    0px -1px 3px var(--primary-color), 1px 0px 3px var(--primary-color),
+    0px 1px 3px var(--primary-color);
+}
+
+h2 {
+  font-size: 1.25rem;
+}
+
+input,
+.input-mock {
   color: inherit;
-  text-decoration: none;
+  background-color: var(--secondary-color-high-transparency);
+  text-align: center;
+  align-content: center;
+  /* width: 3rem; */
+  font-size: 1rem;
+  padding: 0.25rem 0.5rem;
+  transition: var(--fast-transition) var(--default-animation);
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+input:hover,
+.input-mock:hover {
+  background-color: var(--secondary-color-medium-transparency);
+}
+
+input[type="color"],
+input[type="checkbox"] {
+  display: none;
+}
+
+label:has(> input[type="color"]) > div {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  border: 1px solid black;
+  cursor: pointer;
+}
+
+.ethereal {
+  opacity: 25%;
+}
+
+.focused {
+  box-shadow: 0px 0px 5px 3px var(--secondary-color);
+  /* padding: 0.5rem; */
+}
+
+.grabbable {
+  cursor: grab;
+}
+
+.grabbable:active {
+  cursor: grabbing;
+}
+
+.hidden {
+  opacity: 0;
+  visibility: hidden;
+}
+
+.yellow {
+  color: var(--yellow);
 }
