new var primary-color-high-transparency added

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,7 @@
   --default-animation: ease-in-out;
 
   --primary-color: #262626;
+  --primary-color-high-transparency: #2626263f;
   --secondary-color: #eaeae5;
   --secondary-color-light-transparency: #eaeae5bf;
   --secondary-color-medium-transparency: #eaeae57f;
