--- a/src/components/ShadowStyler/ShadowStyler.module.css
+++ b/src/components/ShadowStyler/ShadowStyler.module.css
@@ -4,10 +4,6 @@
   transition: var(--average-transition) var(--default-animation);
 }
 
-.shadowStyler:not(:first-child) {
-  padding-top: 2.5rem;
-}
-
 .shadowStyler h2 {
   padding: 0.5rem;
 }
@@ -87,14 +83,13 @@
   gap: 0.25rem;
 }
 
-/* .colorSelection > label {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  gap: 0.5rem;
-  font-size: 1rem;
-}
+@media (max-width: 1023px) {
+  .inputContainer {
+    margin-top: 0.75rem;
+    gap: 0.75rem;
+  }
 
-.colorSelection button {
-  font-size: 1.25rem;
-} */
+  .infoText {
+    margin-bottom: 0.25rem;
+  }
+}
