--- a/src/components/TextStyler/TextStyler.module.css
+++ b/src/components/TextStyler/TextStyler.module.css
@@ -36,3 +36,15 @@
 .textStyler.closed > div:first-of-type > button {
   transform: rotate(180deg);
 }
+
+@media (max-width: 1023px) {
+  .textStyler {
+    flex: 1;
+    height: fit-content;
+  }
+
+  .textStyler > div:last-of-type {
+    margin-top: 0.75rem;
+    gap: 0.75rem;
+  }
+}
