--- a/src/components/Workspace/Workspace.module.css
+++ b/src/components/Workspace/Workspace.module.css
@@ -3,16 +3,13 @@
   overflow: hidden;
 }
 
-/* .header {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: var(--header-height);
-  align-content: center;
-  padding: 0 1.5rem;
-} */
 .previewWindow {
   display: flex;
   height: 100%;
+}
+
+@media (max-width: 1023px) {
+  .previewWindow {
+    flex-direction: column-reverse;
+  }
 }
