--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,8 @@
   --default-animation: ease-in-out;
   --fade-in-animation: fade-in var(--fast-transition);
 
+  --gap-between-inputs: 1.5rem;
+
   --primary-color: #262626;
   --primary-color-high-transparency: #2626263f;
   --secondary-color: #eaeae5;
@@ -15,7 +17,7 @@
   --yellow: #e0dc4f;
 
   --default-border: 1px solid var(--secondary-color-medium-transparency);
-
+  --transparent-border: 1px solid transparent;
   --icon-shadow: drop-shadow(-1px 0px 1px var(--primary-color))
     drop-shadow(0px -1px 1px var(--primary-color))
     drop-shadow(1px 0px 1px var(--primary-color))
