--- a/src/components/ShadowStyler/ShadowStyler.module.css
+++ b/src/components/ShadowStyler/ShadowStyler.module.css
@@ -44,7 +44,7 @@
   opacity: 0;
 }
 
-.toolsContainer {
+/* .toolsContainer {
   position: relative;
   z-index: 1;
   display: flex;
@@ -59,7 +59,7 @@
 
 .shadowStyler.closed .toolsContainer > button:last-child {
   transform: rotate(180deg);
-}
+} */
 
 .infoText {
   height: 1rem;
@@ -71,7 +71,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  gap: 1.25rem;
+  gap: var(--gap-between-inputs);
   max-height: 100vh;
   overflow: hidden;
   margin-top: 1.25rem;
