--- a/src/components/Workspace/Workspace.module.css
+++ b/src/components/Workspace/Workspace.module.css
@@ -4,6 +4,21 @@
   position: relative;
 }
 
+.test {
+  position: absolute;
+  width: 50%;
+  height: 50%;
+  border: var(--default-border);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  background-color: white;
+}
+
 .previewWindow {
   display: flex;
   height: 100%;
