--- a/src/components/extras/About/About.module.css
+++ b/src/components/extras/About/About.module.css
@@ -7,34 +7,41 @@ div:has(> .window) {
 }
 
 .window {
-  width: 33%;
-  height: 33%;
-  border: 1px solid var(--primary-color);
-  background-color: var(--secondary-color);
+  /* max-width: 50%;
+  max-height: 50%; */
+  background-color: var(--secondary-color-light-transparency);
+  backdrop-filter: blur(10px);
   color: var(--primary-color);
-  position: relative;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0px 0px 15px 5px;
+  overflow: visible;
 }
 
 .window > div {
-  padding: var(--standard-padding);
+  padding: 2rem;
+  overflow: auto;
+  scrollbar-width: thin;
+  scrollbar-color: var(--primary-color) transparent;
   height: 100%;
-  overflow-y: auto;
+  max-height: 100%;
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  scrollbar-width: thin;
 }
 
 .window > div > h2 {
-  text-align: center;
   font-weight: bold;
   font-size: 2rem;
 }
 
 .window > button:first-of-type {
   position: absolute;
-  top: var(--standard-padding);
-  right: var(--standard-padding);
+  bottom: 100%;
+  left: 100%;
+  padding: 0.25rem;
+  color: var(--secondary-color);
+  filter: var(--icon-shadow);
 }
 
 .window > div > div:last-of-type {
