--- a/src/components/inputs/NumericInputSlider/NumericInputSlider.module.css
+++ b/src/components/inputs/NumericInputSlider/NumericInputSlider.module.css
@@ -37,24 +37,66 @@
   align-items: center;
   transition: var(--fast-transition) var(--default-animation);
   touch-action: none;
-  cursor: pointer;
   padding: var(--standard-padding);
-}
 
-.sliderContainer > button {
-  position: absolute;
-  height: 50%;
-  aspect-ratio: 1;
-  border-radius: 50%;
-  background-color: var(--primary-color);
-  border: 1px solid var(--secondary-color);
-}
+  /* Reset native style */
+  & input[type="range"] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    width: 100%;
+  }
 
-.track {
-  box-sizing: content-box;
-  width: 100%;
-  height: 3px;
-  cursor: pointer;
-  background-color: var(--primary-color);
-  border: 1px solid var(--secondary-color);
+  /* TRACK */
+  & input[type="range"]::-webkit-slider-runnable-track {
+    box-sizing: content-box;
+    width: 100%;
+    height: 3px;
+    background-color: var(--primary-color);
+    border: 1px solid var(--secondary-color);
+    cursor: pointer;
+  }
+
+  & input[type="range"]::-moz-range-track {
+    box-sizing: content-box;
+    width: 100%;
+    height: 3px;
+    background-color: var(--primary-color);
+    border: 1px solid var(--secondary-color);
+    cursor: pointer;
+  }
+
+  /* THUMB */
+  & input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    height: 1.25rem;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    background-color: var(--primary-color);
+    border: 1px solid var(--secondary-color);
+    cursor: grab;
+
+    &:active {
+      cursor: grabbing;
+    }
+  }
+
+  & input[type="range"]::-moz-range-thumb {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    height: 1.25rem;
+    aspect-ratio: 1 / 1;
+    border-radius: 50%;
+    background-color: var(--primary-color);
+    border: 1px solid var(--secondary-color);
+    cursor: grab;
+
+    &:active {
+      cursor: grabbing;
+    }
+  }
 }
