--- a/src/components/inputs/SelectInput/SelectInput.module.css
+++ b/src/components/inputs/SelectInput/SelectInput.module.css
@@ -103,7 +103,7 @@
   background-color: var(--secondary-color-high-transparency);
 }
 
-.selectionWindow > div > button {
+.selectionWindow > div > input[type="button"] {
   width: 100%;
   height: 1.5rem;
   text-align: center;
@@ -113,8 +113,8 @@
   white-space: nowrap;
 }
 
-.selectionWindow > div > button:hover,
-.selectionWindow > div > button.active {
+.selectionWindow > div > input[type="button"]:hover,
+.selectionWindow > div > input[type="button"].active {
   background-color: var(--secondary-color-medium-transparency);
   color: var(--primary-color);
 }
